<resources>
    <string name="app_name">SpacePal</string>
    <string name="hint_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_forgot_your_password">Forgot your password?</string>
    <string name="driver">Driver</string>
    <string name="picker">Picker</string>
    <string name="submit_email">Submit</string>
    <string name="editprofile">Edit Profile</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="loading_bay">Loading Bay</string>
    <string name="print_sticker">Print Sticker</string>
    <string name="bundle_complete">Bundle Complete</string>
    <string name="complete">Complete</string>
    <string name="scan_loading_bay">Scan Loading Bay</string>
</resources>
