<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />
    <include
        android:id="@+id/layoutDetailsTop"
        layout="@layout/layout_assignment_details" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAssignmentItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutDetailsTop"
        app:layout_constraintBottom_toTopOf="@+id/btnBundleComplete"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btnBundleComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bundle_complete"
        android:textAllCaps="false"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnPrintSticker"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btnPrintSticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_sticker"
        android:textAllCaps="false"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnLoadingBay"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:id="@+id/btnLoadingBay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_bay"
        android:textAllCaps="false"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        />
</android.support.constraint.ConstraintLayout>